TEIIDDES-871 removing unused legacy code
git-svn-id: http://anonsvn.jboss.org/repos/tdesigner/trunk@1538 ceac5f5e-c25f-0410-8b95-ec8c2776e4a6